alpm-types/src/relation/snapshots/soname::invalid_sonamev1_parser@case_1.snap
---
source: alpm-types/src/relation/soname.rs
---
noso
^
invalid shared object name
Parser failed with the following error:
noso
    ^
invalid suffix
expected shared object name suffix '.so'
